テストコード追加

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "test": "jest",
+    "test:init": "npx prisma migrate reset --force --env-file=.env.local",
+    "test:watch": "jest --watch",
+    "test:unit": "jest --testPathIgnorePatterns=tests/integration",
+    "test:integration": "jest --testPathPattern=tests/integration",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
