--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
     "test:unit": "jest --testPathIgnorePatterns=tests/integration",
     "test:integration": "jest --testPathPattern=tests/integration",
     "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write 'src/**/*.{ts,json}'",
@@ -32,7 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
